--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
-Gemfile
-Gemfile.lock
-Capfile
-config/
-.tweet-cache/
-.sass-cache/
-.public
+*.swp
+.bundle
+.DS_Store
+.sass-cache
+.gist-cache
+.pygments-cache
+_deploy
+public
+sass.old
+source.old
+source/_stash
+source/stylesheets/screen.css
+vendor
+node_modules
+.tweet-cache
