--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ destination: public
 plugins: plugins
 code_dir: downloads/code
 category_dir: categories
-markdown: kramdown
+markdown: rdiscount
 rdiscount:
   extensions:
     - autolink
