Add pages. This is the first commit I deployed.

--- a/_config.yml
+++ b/_config.yml
@@ -110,8 +110,8 @@ assets:
     - _assets/jwplayer
     - _assets/stylesheets
     - _assets/webfonts
-  compress:
-    js:   'yui'
-    css:  'yui'
+#  compress:
+#    js:   'yui'
+#    css:  'yui'
   cachebust: hard
   gzip: [ text/css, application/javascript ]
