add G+ and Google tracking

--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ twitter_user: danielballan
 twitter_tweet_button: true
 
 # Google +1
-google_plus_one: false
+google_plus_one: true 
 google_plus_one_size: medium
 
 # Google Plus Profile
@@ -92,10 +92,10 @@ disqus_short_name:
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-18006985-1
 
 # Facebook Like
-facebook_like: false
+facebook_like: true 
 
 # Plugin: jekyll-assets
 assets:
